--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,25 @@
-numpy
-matplotlib
-scipy
-pytest
-xarray
+contourpy==1.0.7
+cycler==0.11.0
+fonttools==4.39.3
+imageio==2.27.0
+importlib-resources==5.12.0
+kiwisolver==1.4.4
+lazy_loader==0.2
+matplotlib==3.7.1
+networkx==3.1
+numpy==1.24.2
+packaging==23.0
+pandas==2.0.0
+Pillow==9.5.0
+pkg_resources==0.0.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+PyWavelets==1.4.1
+scikit-image==0.20.0
+scipy==1.9.1
+six==1.16.0
+tifffile==2023.3.21
+tzdata==2023.3
+xarray==2023.1.0
+zipp==3.15.0
