--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,42 @@
+attrs==22.2.0
+cfgv==3.3.1
 contourpy==1.0.7
 cycler==0.11.0
+distlib==0.3.6
+exceptiongroup==1.1.1
+filelock==3.11.0
 fonttools==4.39.3
+h5py==3.8.0
+identify==2.5.22
 imageio==2.27.0
 importlib-resources==5.12.0
+iniconfig==2.0.0
 kiwisolver==1.4.4
 lazy_loader==0.2
 matplotlib==3.7.1
 networkx==3.1
+nodeenv==1.7.0
 numpy==1.24.2
 packaging==23.0
 pandas==2.0.0
 Pillow==9.5.0
 pkg_resources==0.0.0
+platformdirs==3.2.0
+pluggy==1.0.0
+pre-commit==3.2.2
+psutil==5.9.4
 pyparsing==3.0.9
+pytest==7.2.2
 python-dateutil==2.8.2
 pytz==2023.3
 PyWavelets==1.4.1
+PyYAML==6.0
 scikit-image==0.20.0
 scipy==1.9.1
 six==1.16.0
 tifffile==2023.3.21
+tomli==2.0.1
 tzdata==2023.3
+virtualenv==20.21.0
 xarray==2023.1.0
 zipp==3.15.0
