--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ python-dateutil==2.8.2
 pytz==2023.3
 PyWavelets==1.4.1
 PyYAML==6.0
+requests==2.31.0
 scikit-image==0.20.0
 scipy==1.9.1
 six==1.16.0
