skip making plots on GA

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Run tests with pytest
         run: |
           pip install pytest
-          pytest
+          pytest --ignore=tests/test_produce_plots.py
